--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,9 +1,25 @@
 body {
     background-color: rgb(255, 255, 255);
+    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
 }
 
 .container {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
+}
+.image {
+    width: 370px;
+    margin-top: 50px;
+}
+
+@media (max-width: 775px) {
+    .container {
+        margin: 0 10%;
+    }
+
+    .image {
+        width: 100%;
+    }
 }
